# jate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  change_log_v1.11-2.0Alpha.txt  jate.candidate.patterns  jate.patterns.aclrdtec  jate.patterns.genia  jate.properties  jate.txt  mkdocs.yml  package-lock.json  package.json  pom.xml  pyproject.toml  stats.xlsx  terms.txt  ~$stats.xlsx
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  container-publish.yml  pr-check.yml  publish.yml  release.yml
docs/: architecture-agent.md  benchmark-results.md  changelog.md  contributing.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: algorithms.md  architecture.md  cli.md  corpus.md  evaluation.md  export.md  extractors.md
docs/memories/: plan-issue74-rest.md  plan-thin-web-server.md  plan.md
docs/plan/: 2026-03-08-jate-python-rewrite-design.md
docs/plans/: 2026-03-09-docs-update-design.md  2026-03-09-docs-update-plan.md  2026-03-09-feature-system-revamp.md  2026-03-09-parallelism-design.md  2026-03-09-parallelism-plan.md  2026-03-09-sentence-context-design.md  2026-03-09-sentence-context-plan.md
docs/reference/: api.md
example/: chisquare.txt  chisquare_2.txt  ridf.txt  weirdness.txt
example/input/: dog.txt  elephant.txt  horse.txt  shark.txt  tarantula.txt
resource/: en-stoplist.txt  fr-stoplist.txt  stoplist.txt
scripts/: docker_smoke_api.sh  docker_smoke_test.sh  run_all_benchmarks.py  update_version.py
src/: jate.properties
tests/: test_algorithms.py  test_api.py  test_architecture.py  test_cli.py  test_context.py  test_corpus.py  test_datasets.py  test_entropy.py  test_evaluation.py  test_extractors.py  test_extractors_sentence.py  test_features.py  test_models.py  test_nlp.py  test_parallel.py  test_server_api.py  test_store.py  test_version.py  test_voting.py
(+1226 files in other folders)
